--- a/index.html
+++ b/index.html
@@ -16,669 +16,9 @@
     content="Professional portfolio showcasing full-stack development projects and skills">
   <meta property="og:type" content="website">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="icon" type="image/x-icon" href="assets/ruby.ico" />
 
-  <style>
-    /* Design System Colors */
-    :root {
-      --background: hsl(0, 0%, 100%);
-      --foreground: hsl(225, 15%, 20%);
-      --card: hsl(0, 0%, 100%);
-      --card-foreground: hsl(225, 15%, 20%);
-      --primary: hsl(224, 76%, 48%);
-      --primary-foreground: hsl(0, 0%, 100%);
-      --secondary: hsl(220, 13%, 95%);
-      --secondary-foreground: hsl(225, 15%, 20%);
-      --muted: hsl(220, 13%, 95%);
-      --muted-foreground: hsl(225, 8%, 55%);
-      --accent: hsl(224, 76%, 48%);
-      --accent-foreground: hsl(0, 0%, 100%);
-      --border: hsl(214.3, 31.8%, 91.4%);
-
-      /* Custom gradients and shadows */
-      --gradient-primary: linear-gradient(135deg, hsl(224, 76%, 48%), hsl(213, 76%, 58%));
-      --gradient-subtle: linear-gradient(180deg, hsl(0, 0%, 100%), hsl(220, 13%, 98%));
-      --shadow-soft: 0 4px 24px -8px hsl(224, 76%, 48%, 0.1);
-      --shadow-medium: 0 8px 40px -12px hsl(224, 76%, 48%, 0.15);
-      --transition-smooth: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
-    }
-
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', sans-serif;
-      line-height: 1.6;
-      color: var(--foreground);
-      background-color: var(--background);
-    }
-
-    .container {
-      max-width: 1200px;
-      margin: 0 auto;
-      padding: 0 1.5rem;
-    }
-
-    /* Header Styles */
-    .header {
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 50;
-      transition: var(--transition-smooth);
-      background-color: transparent;
-    }
-
-    .header.scrolled {
-      background-color: hsla(0, 0%, 100%, 0.95);
-      backdrop-filter: blur(8px);
-      box-shadow: var(--shadow-soft);
-    }
-
-    .nav {
-      display: flex;
-      align-items: center;
-      justify-content: space-between;
-      padding: 1rem 0;
-    }
-
-    .logo {
-      font-size: 1.25rem;
-      font-weight: bold;
-      color: var(--primary);
-    }
-
-    .nav-links {
-      display: none;
-      gap: 2rem;
-    }
-
-    @media (min-width: 768px) {
-      .nav-links {
-        display: flex;
-      }
-    }
-
-    .nav-link {
-      background: none;
-      border: none;
-      color: var(--foreground);
-      cursor: pointer;
-      transition: var(--transition-smooth);
-      text-transform: capitalize;
-      font-size: 1rem;
-    }
-
-    .nav-link:hover {
-      color: var(--primary);
-    }
-
-    .btn {
-      padding: 0.75rem 2rem;
-      border-radius: 0.5rem;
-      font-weight: 500;
-      transition: var(--transition-smooth);
-      cursor: pointer;
-      border: none;
-      text-decoration: none;
-      display: inline-flex;
-      align-items: center;
-      gap: 0.5rem;
-    }
-
-    .btn-primary {
-      background: var(--gradient-primary);
-      color: var(--primary-foreground);
-    }
-
-    .btn-primary:hover {
-      opacity: 0.9;
-    }
-
-    .btn-outline {
-      border: 1px solid var(--primary);
-      color: var(--primary);
-      background: transparent;
-    }
-
-    .btn-outline:hover {
-      background: var(--primary);
-      color: var(--primary-foreground);
-    }
-
-    /* Hero Section */
-    .hero {
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      position: relative;
-      overflow: hidden;
-      background: var(--gradient-subtle);
-    }
-
-    .hero-content {
-      text-align: center;
-      z-index: 10;
-      position: relative;
-    }
-
-    .hero h1 {
-      font-size: 3.5rem;
-      font-weight: bold;
-      margin-bottom: 1.5rem;
-    }
-
-    @media (min-width: 768px) {
-      .hero h1 {
-        font-size: 5rem;
-      }
-    }
-
-    .gradient-text {
-      background: var(--gradient-primary);
-      -webkit-background-clip: text;
-      background-clip: text;
-      -webkit-text-fill-color: transparent;
-    }
-
-    .hero p {
-      font-size: 1.25rem;
-      color: var(--muted-foreground);
-      margin-bottom: 2rem;
-      max-width: 600px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    @media (min-width: 768px) {
-      .hero p {
-        font-size: 1.5rem;
-      }
-    }
-
-    .hero-buttons {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      margin-bottom: 3rem;
-      align-items: center;
-    }
-
-    @media (min-width: 640px) {
-      .hero-buttons {
-        flex-direction: row;
-        justify-content: center;
-      }
-    }
-
-    .social-links {
-      display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-    }
-
-    .social-link {
-      text-decoration: none;
-      font-weight: 500;
-      color: var(--muted-foreground);
-      transition: var(--transition-smooth);
-      font-size: 1.5rem;
-    }
-
-    .social-link:hover {
-      color: var(--primary);
-    }
-
-    .scroll-indicator {
-      position: absolute;
-      bottom: 2rem;
-      left: 50%;
-      transform: translateX(-50%);
-      color: var(--muted-foreground);
-      cursor: pointer;
-      transition: var(--transition-smooth);
-      animation: bounce 2s infinite;
-    }
-
-    .scroll-indicator:hover {
-      color: var(--primary);
-    }
-
-    @keyframes bounce {
-
-      0%,
-      20%,
-      53%,
-      80%,
-      100% {
-        transform: translateX(-50%) translateY(0);
-      }
-
-      40%,
-      43% {
-        transform: translateX(-50%) translateY(-30px);
-      }
-
-      70% {
-        transform: translateX(-50%) translateY(-15px);
-      }
-
-      90% {
-        transform: translateX(-50%) translateY(-4px);
-      }
-    }
-
-    /* Section Styles */
-    .section {
-      padding: 5rem 0;
-    }
-
-    .section-alt {
-      background: var(--gradient-subtle);
-    }
-
-    .section-title {
-      font-size: 2.5rem;
-      font-weight: bold;
-      text-align: center;
-      margin-bottom: 4rem;
-      color: var(--foreground);
-    }
-
-    /* Card Styles */
-    .card {
-      background: var(--card);
-      border-radius: 0.75rem;
-      box-shadow: var(--shadow-soft);
-      transition: var(--transition-smooth);
-      border: none;
-    }
-
-    .card:hover {
-      box-shadow: var(--shadow-medium);
-      transform: translateY(-5px);
-    }
-
-    .card-content {
-      padding: 2rem;
-    }
-
-    /* Grid Layouts */
-    .grid {
-      display: grid;
-      gap: 2rem;
-    }
-
-    .grid-2 {
-      grid-template-columns: 1fr;
-    }
-
-    @media (min-width: 768px) {
-      .grid-2 {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-
-    .grid-3 {
-      grid-template-columns: 1fr;
-    }
-
-    @media (min-width: 768px) {
-      .grid-3 {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-
-    @media (min-width: 1024px) {
-      .grid-3 {
-        grid-template-columns: repeat(3, 1fr);
-      }
-    }
-
-    /* About Section */
-    .about-grid {
-      display: grid;
-      gap: 3rem;
-      align-items: center;
-    }
-
-    @media (min-width: 768px) {
-      .about-grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-
-    .text-lg {
-      font-size: 1.125rem;
-      color: var(--muted-foreground);
-      margin-bottom: 1.5rem;
-      line-height: 1.8;
-    }
-
-    .tags {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 1rem;
-    }
-
-    .tag {
-      background: hsl(224, 76%, 48%, 0.1);
-      color: var(--primary);
-      padding: 0.5rem 1rem;
-      border-radius: 9999px;
-      font-size: 0.875rem;
-      font-weight: 500;
-    }
-
-    .fact-grid {
-      display: grid;
-      gap: 1rem;
-    }
-
-    .fact-row {
-      display: flex;
-      justify-content: space-between;
-    }
-
-    .fact-label {
-      color: var(--muted-foreground);
-    }
-
-    .fact-value {
-      font-weight: 500;
-    }
-
-    /* Skills Section */
-    .skill-card {
-      display: flex;
-      align-items: center;
-      margin-bottom: 1rem;
-    }
-
-    .skill-icon {
-      margin-right: 0.75rem;
-      color: var(--primary);
-      font-size: 2rem;
-    }
-
-    .skill-title {
-      font-size: 1.125rem;
-      font-weight: 600;
-      color: var(--foreground);
-    }
-
-    .skill-tags {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 0.5rem;
-      margin-top: 1rem;
-    }
-
-    .skill-tag {
-      background: var(--secondary);
-      color: var(--secondary-foreground);
-      padding: 0.25rem 0.75rem;
-      border-radius: 9999px;
-      font-size: 0.875rem;
-      font-weight: 500;
-    }
-
-    /* Projects Section */
-    .project-image {
-      font-size: 4rem;
-      text-align: center;
-      margin-bottom: 1rem;
-    }
-
-    .project-title {
-      font-size: 1.25rem;
-      font-weight: 600;
-      color: var(--foreground);
-      margin-bottom: 1rem;
-    }
-
-    .project-buttons {
-      display: flex;
-      gap: 1rem;
-      margin-top: 1.5rem;
-    }
-
-    /* Experience Section */
-    .exp-header {
-      display: flex;
-      flex-direction: column;
-      margin-bottom: 1rem;
-    }
-
-    @media (min-width: 768px) {
-      .exp-header {
-        flex-direction: row;
-        justify-content: space-between;
-        align-items: start;
-      }
-    }
-
-    .exp-title {
-      font-size: 1.25rem;
-      font-weight: 600;
-      color: var(--foreground);
-      margin-bottom: 0.25rem;
-    }
-
-    .exp-company {
-      color: var(--primary);
-      font-weight: 500;
-    }
-
-    .exp-period {
-      color: var(--muted-foreground);
-      font-weight: 500;
-      margin-top: 0.5rem;
-    }
-
-    @media (min-width: 768px) {
-      .exp-period {
-        margin-top: 0;
-      }
-    }
-
-    .achievements {
-      margin-top: 1rem;
-    }
-
-    .achievements h4 {
-      font-weight: 500;
-      color: var(--foreground);
-      margin-bottom: 0.5rem;
-    }
-
-    .achievements ul {
-      list-style: disc;
-      margin-left: 1.5rem;
-      color: var(--muted-foreground);
-    }
-
-    .achievements li {
-      margin-bottom: 0.25rem;
-    }
-
-    /* Contact Section */
-    .contact-grid {
-      display: grid;
-      gap: 3rem;
-    }
-
-    @media (min-width: 768px) {
-      .contact-grid {
-        grid-template-columns: repeat(2, 1fr);
-      }
-    }
-
-    .contact-info h3 {
-      font-size: 1.5rem;
-      font-weight: 600;
-      margin-bottom: 1.5rem;
-      color: var(--foreground);
-    }
-
-    .contact-item {
-      display: flex;
-      align-items: center;
-      margin-bottom: 1.5rem;
-    }
-
-    .contact-icon {
-      color: var(--primary);
-      margin-right: 1rem;
-      font-size: 1.5rem;
-    }
-
-    .contact-details p {
-      font-weight: 500;
-      color: var(--foreground);
-      margin-bottom: 0.25rem;
-    }
-
-    .contact-details a {
-      color: var(--muted-foreground);
-      text-decoration: none;
-      transition: var(--transition-smooth);
-    }
-
-    .contact-details a:hover {
-      color: var(--primary);
-    }
-
-    /* Form Styles */
-    .form {
-      display: grid;
-      gap: 1.5rem;
-    }
-
-    .form-group label {
-      display: block;
-      font-size: 0.875rem;
-      font-weight: 500;
-      color: var(--foreground);
-      margin-bottom: 0.5rem;
-    }
-
-    .form-input,
-    .form-textarea {
-      width: 100%;
-      padding: 0.75rem;
-      border: 1px solid var(--border);
-      border-radius: 0.5rem;
-      background: var(--background);
-      color: var(--foreground);
-      transition: var(--transition-smooth);
-    }
-
-    .form-input:focus,
-    .form-textarea:focus {
-      outline: none;
-      border-color: var(--primary);
-      box-shadow: 0 0 0 3px hsl(224, 76%, 48%, 0.1);
-    }
-
-    .form-textarea {
-      resize: vertical;
-      min-height: 120px;
-    }
-
-    /* Footer */
-    .footer {
-      background: var(--foreground);
-      color: var(--background);
-      padding: 2rem 0;
-      text-align: center;
-    }
-
-    .footer p {
-      font-size: 0.875rem;
-      opacity: 0.9;
-    }
-
-    .footer .footer-sub {
-      font-size: 0.75rem;
-      opacity: 0.75;
-      margin-top: 0.5rem;
-    }
-
-    /* Utility Classes */
-    .text-center {
-      text-align: center;
-    }
-
-    .mb-1 {
-      margin-bottom: 0.25rem;
-    }
-
-    .mb-2 {
-      margin-bottom: 0.5rem;
-    }
-
-    .mb-4 {
-      margin-bottom: 1rem;
-    }
-
-    .mb-6 {
-      margin-bottom: 1.5rem;
-    }
-
-    .mb-8 {
-      margin-bottom: 2rem;
-    }
-
-    .mt-2 {
-      margin-top: 0.5rem;
-    }
-
-    .mt-4 {
-      margin-top: 1rem;
-    }
-
-    .mt-8 {
-      margin-top: 2rem;
-    }
-
-    .w-full {
-      width: 100%;
-    }
-
-    .max-w-4xl {
-      max-width: 56rem;
-      margin: 0 auto;
-    }
-
-    .max-w-6xl {
-      max-width: 72rem;
-      margin: 0 auto;
-    }
-
-    .space-y-8>*+* {
-      margin-top: 2rem;
-    }
-
-    .space-y-6>*+* {
-      margin-top: 1.5rem;
-    }
-
-    .space-y-4>*+* {
-      margin-top: 1rem;
-    }
-
-    .space-y-2>*+* {
-      margin-top: 0.5rem;
-    }
-    .text-decoration-none {
-      text-decoration: none;
-    }
-  </style>
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -712,7 +52,7 @@
         </p>
         <div class="hero-buttons">
           <button class="btn btn-primary" onclick="scrollToSection('projects')">View My Work</button>
-          <a href="resume.pdf" download="Narinder_Singh_Resume.pdf" class="btn btn-outline">
+          <a href="assets/resume.pdf" download="Narinder_Singh_Resume.pdf" class="btn btn-outline">
             ⬇ Download Resume
           </a>
         </div>
