--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div class="social-links">
           <a href="https://github.com/NarinderSingh-1" class="social-link" style="color:#333;"><i
               class="fa-brands fa-github"></i></a>
-          <a href="mailto:developer.narinder@example.com" class="social-link" style="color:#d14836;"><i
+          <a href="mailto:developer.narinder@gmail.com" class="social-link" style="color:#d14836;"><i
               class="fa-solid fa-envelope"></i></a>
           <a href="https://www.linkedin.com/in/narinder-singh-b27996206/" target="_blank" rel="noopener noreferrer"
             style="color:#0a66c2;" class="social-link">
@@ -450,8 +450,8 @@
                 <div class="contact-icon">📞</div>
                 <div class="contact-details">
                   <p>Phone</p>
-                  <a href="tel:+1234567890">+91 98886-19270</a><br>
-                  <a href="tel:+1234567890">+91 88377-06318</a>
+                  <a href="tel:+919888619270">+91 98886-19270</a><br>
+                  <a href="tel:+918837706318">+91 88377-06318</a>
                 </div>
               </div>
 
@@ -467,7 +467,7 @@
             <div class="social-links mt-8">
               <a href="https://github.com/NarinderSingh-1" class="social-link" style="color:#333;"><i
                   class="fa-brands fa-github"></i></a>
-              <a href="mailto:developer.narinder@example.com" class="social-link" style="color:#d14836;"><i
+              <a href="mailto:developer.narinder@gmail.com" class="social-link" style="color:#d14836;"><i
                   class="fa-solid fa-envelope"></i></a>
               <a href="https://www.linkedin.com/in/narinder-singh-b27996206/" target="_blank" rel="noopener noreferrer"
                 style="color:#0a66c2;" class="social-link">
